# docker-scripts

./: .travis.yml  README.md  TODO  docker-compose.yml  docker_push  ros-development.dockerfile  ros.bat  test-docker-compose.yml  test.dockerfile
Linux/: ompl-install-simple.sh  ompl-install.sh
Windows/: README.md  config.xlaunch  config.xlaunch - Shortcut.lnk
docs/: README.md  custom-cost-ompl.md  hardware-acceleration-linux.md  linux-intel.md  linux-nvidia.md  simulated-sawyer.md
generic/: launch.sh  nvidia.docker-compose.yml  setup_xauth.sh
ompl/: Dockerfile  Dockerfile-Base  Dockerfile-Simple  README.md  docker-compose-base.yml  docker-compose-new.yml  docker-compose-simple.yml  docker-compose.yml  intel.docker-compose.yml  nvidia.Dockerfile  nvidia.docker-compose.yml  package.xml  pillar.scene  windows.docker-compose.yml
ompl-custom/: Dockerfile  docker-compose.yml
ompl-light/: Dockerfile  sawyer_moveit.rviz
ompl/config/: panda_demo.rviz
ompl/custom/: Dockerfile  docker-compose.yml
ompl/lfd/: Dockerfile  README.md  docker-compose.yml  intel.docker-compose.yml  nvidia.Dockerfile  nvidia.docker-compose.yml  run_nvidia.sh  windows.docker-compose.yml
ompl/light/: Dockerfile  docker-compose.yml
ompl/sawyer/: Dockerfile  README.md  intel.docker-compose.yml  nvidia.Dockerfile  nvidia.docker-compose.yml  windows.docker-compose.yml
ros/: Dockerfile  README.md  docker-compose.yml  intel.docker-compose.yml  nvidia.Dockerfile  nvidia.docker-compose.yml  windows.docker-compose.yml
test/: Dockerfile  docker-compose.yml  intel.docker-compose.yml  (+2 more)
(+15 files in other folders)
