<?xml version="1.0"?>
<package>
  <name>ompl</name>
  <version>1.2.3</version>
  <description>OMPL is a free sampling-based motion planning library.</description>
  <maintainer email="mmoll@rice.edu">Mark Moll</maintainer>
  <license>BSD</license>

  <url type="website">http://ompl.kavrakilab.org</url>
  <url type="bugtracker">https://bitbucket.org/ompl/ompl/issues</url>
  <url type="repository">https://bitbucket.org/ompl/ompl/</url>

  <author>Kavraki Lab</author>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
